force-app/main/default/objects/User/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>1, 2, 3 dependiendo del negocio (Generación, Electromecánica, etc.)</description>
    <label>Branch</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>