force-app/main/default/objects/User/fields/Carpeta__c.field-meta.xml
<CustomField>
    <fullName>Carpeta__c</fullName>
    <formula>LEFT(Email, FIND(&apos;@&apos;, Email) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carpeta</label>
    <type>Text</type>
</CustomField>