force-app/main/default/objects/User/fields/Centro_Costo__c.field-meta.xml
<CustomField>
    <fullName>Centro_Costo__c</fullName>
    <label>Centro de Costo</label>
    <length>5</length>
    <type>Text</type>
</CustomField>