force-app/main/default/objects/User/fields/Codigo_SAP__c.field-meta.xml
<CustomField>
    <fullName>Codigo_SAP__c</fullName>
    <label>Código SAP</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>