force-app/main/default/objects/User/fields/CodigoUN__c.field-meta.xml
<CustomField>
    <fullName>CodigoUN__c</fullName>
    <description>Código de la Unidad de Negocio</description>
    <label>Código UN</label>
    <length>2</length>
    <type>Text</type>
</CustomField>