force-app/main/default/objects/User/fields/Linea_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Linea_Negocio__c</fullName>
    <label>Línea de Negocio</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>