force-app/main/default/objects/User/fields/Ofertista__c.field-meta.xml
<CustomField>
    <fullName>Ofertista__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ofertista</label>
    <type>Checkbox</type>
</CustomField>