force-app/main/default/objects/User/fields/RUT_DV__c.field-meta.xml
<CustomField>
    <fullName>RUT_DV__c</fullName>
    <description>Dígito verificador</description>
    <inlineHelpText>Dígito verificador</inlineHelpText>
    <label>DV</label>
    <length>1</length>
    <type>Text</type>
</CustomField>