force-app/main/default/objects/User/fields/RUT_SD__c.field-meta.xml
<CustomField>
    <fullName>RUT_SD__c</fullName>
    <description>Rut de usuario sin digito verificador</description>
    <inlineHelpText>Rut de usuario sin digito verificador</inlineHelpText>
    <label>RUT (Sin dígito)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>