force-app/main/default/objects/User/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <label>Sucursal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>