force-app/main/default/objects/User/fields/UnidadNegocio__c.field-meta.xml
<CustomField>
    <fullName>UnidadNegocio__c</fullName>
    <label>Unidad de Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electromecánica</fullName>
            </value>
            <value>
                <fullName>Generación</fullName>
            </value>
            <value>
                <fullName>Generación Servicios</fullName>
            </value>
            <value>
                <fullName>Lagsa TI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>